--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ html,body,#root,.app,.content{
 .app{
   display: flex;
   position: relative;
+  height: 100vh;
+  overflow: none;
 }
 ::-webkit-scrollbar{
   width: 10px;
